Update to Loom 1.12